--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Outfit', sans-serif;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     margin: 0;
     background-color: hsl(217, 54%, 11%);
 }
@@ -82,4 +83,14 @@ hr {
     letter-spacing: .03rem;
     margin-top: 4.7px;
     margin-left: 15px;
+}
+
+.attribution {
+    color: rgba(255, 255, 255, 0.348);
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+a {
+    text-decoration: none;
 }
